Add catalog access teaser flow
